# rpagdenwebsite

./: .coveragerc  .gitignore  MANIFEST.in  Pipfile  README.md  README.txt  development.ini  package-lock.json  package.json  production.ini  pyproject.toml  pyramid-reorg.sh  pytest.ini  setup.py  uwsgi-rpadgenweb.ini  writeup.txt
conf/global/: rpagdenweb.conf  rpagdenweb.ini
conf/local/: rpagdenweb.ini
docs/: writeup.txt
rjasweetweb/: tests.py
rjasweetweb/templates/: layout.jinja2
rjasweetweb/views/: default.py
rpagdenweb/: __init__.py  tests.py
rpagdenweb/templates/: layout.jinja2
rpagdenweb/views/: default.py
