[tool.poetry]
name = "rpagdenweb"
version = "0.1.0"
description = "Web app to be run on rpagden.com"
authors = ["Irradium"]

[tool.poetry.dependencies]
python = "^3.6"
pyramid = "^1.10.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
