[tool.poetry]
name = "rpagdenweb"
version = "0.1.0"
description = "Web app to be run on rpagden.com"
authors = ["Irradium"]

[tool.poetry.dependencies]
python = "^3.6"
pyramid = "^1.10.4"
pyramid_webassets = "^0.10"
pyramid_jinja2 = "^2.8"
uwsgi = "^2.0.18"
webassets = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
